# bulk-renamer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  com.chrisdaggas.bulk-renamer.yml
.github/workflows/: ci.yml
data/: com.chrisdaggas.bulk-renamer.desktop  com.chrisdaggas.bulk-renamer.metainfo.xml
data/resources/: bulk-renamer.gresource.xml  style.css
po/: LINGUAS  POTFILES.in  ar.po  bulk-renamer.pot  de.po  el.po  es.po  fr.po  hi.po  it.po  pt.po  ru.po  zh.po
scripts/: clean.sh  compile-translations.sh  doctor.sh  generate-cargo-sources.sh  lint.sh  package-appimage.sh  package-deb.sh  package-rpm.sh  release-build.sh  update-translations.sh
src/: app.rs  cli.rs  lib.rs  main.rs  presets.rs  style.css
src/core/: error.rs  mod.rs  rules.rs  types.rs
src/engine/: engine.rs  mod.rs  transformer.rs  validator.rs
src/expression/: evaluator.rs  grammar.pest  mod.rs  parser.rs
src/metadata/: attributes.rs  exif.rs  id3.rs  mod.rs
src/ui/: csv_io.rs  dialogs.rs  execution.rs  file_item.rs  file_list.rs  header.rs  history_dialog.rs  menu.rs  mod.rs  preferences.rs  preferences_dialog.rs  presets_dialog.rs  preview_panel.rs  rule_dialogs.rs  rule_editor.rs  theme_popover.rs  util.rs  window.rs
src/undo/: logging.rs  mod.rs  undo.rs
