[package]
name = "bulk-renamer"
version = "1.1.0"
edition = "2024"
authors = ["Bulk Renamer Contributors"]
description = "A GNOME-native bulk file renaming application"
license = "MIT"
repository = "https://github.com/christosdaggas/bulk-renamer"
keywords = ["gnome", "gtk4", "rename", "files", "bulk"]
categories = ["filesystem", "gui"]
rust-version = "1.85"

[dependencies]
# GTK4 and libadwaita bindings
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = { version = "0.20", features = ["v2_74"] }
gdk4 = "0.9"
gdk-pixbuf = "0.20"

# Async runtime (minimal features - only used for background metadata loading)
tokio = { version = "1.35", default-features = false, features = ["rt", "sync"] }
async-channel = "2.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"

# Regex and text processing
regex = "1.10"
fancy-regex = "0.13"
unicode-segmentation = "1.10"
titlecase = "2.2"

# Metadata handling
kamadak-exif = "0.5"
id3 = "1.13"
mp4ameta = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Checksums for content-hash template variables
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1"

# File system utilities
walkdir = "2.4"
filetime = "0.2"
glob = "0.3"
dirs = "5.0"

# Internationalization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Clipboard
arboard = "3.3"

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Image handling for thumbnails (limited features to reduce binary size)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Platform-specific file attributes
[target.'cfg(unix)'.dependencies]
xattr = "1.3"
nix = { version = "0.27", features = ["fs", "user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[features]
default = []
portable = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "bulk-renamer"
path = "src/main.rs"

# Debian package configuration
[package.metadata.deb]
maintainer = "Christos Daggas <info@hotwebdesign.gr>"
copyright = "2024-2026, Christos A. Daggas"
license-file = ["LICENSE", "0"]
extended-description = """\
Bulk Renamer is a powerful GTK4/Libadwaita application for batch \
renaming files on Linux. It provides a user-friendly interface with \
rules-based renaming, regex support, case conversion, numbering, \
date insertion, and EXIF/ID3 metadata extraction."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bulk-renamer", "usr/bin/", "755"],
    ["data/com.chrisdaggas.bulk-renamer.desktop", "usr/share/applications/", "644"],
    ["data/com.chrisdaggas.bulk-renamer.metainfo.xml", "usr/share/metainfo/", "644"],
    ["data/icons/hicolor/scalable/apps/com.chrisdaggas.bulk-renamer.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/bulk-renamer/", "644"],
    # Translations: compiled by scripts/compile-translations.sh (run by
    # scripts/package-deb.sh) into target/locale before cargo deb.
    ["target/locale/ar/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/ar/LC_MESSAGES/", "644"],
    ["target/locale/de/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/de/LC_MESSAGES/", "644"],
    ["target/locale/el/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/el/LC_MESSAGES/", "644"],
    ["target/locale/es/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/es/LC_MESSAGES/", "644"],
    ["target/locale/fr/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/fr/LC_MESSAGES/", "644"],
    ["target/locale/hi/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/hi/LC_MESSAGES/", "644"],
    ["target/locale/it/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/it/LC_MESSAGES/", "644"],
    ["target/locale/pt/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/pt/LC_MESSAGES/", "644"],
    ["target/locale/ru/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/ru/LC_MESSAGES/", "644"],
    ["target/locale/zh/LC_MESSAGES/bulk-renamer.mo", "usr/share/locale/zh/LC_MESSAGES/", "644"],
]

# RPM package configuration (for cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bulk-renamer", dest = "/usr/bin/bulk-renamer", mode = "755" },
    { source = "data/com.chrisdaggas.bulk-renamer.desktop", dest = "/usr/share/applications/com.chrisdaggas.bulk-renamer.desktop", mode = "644" },
    { source = "data/com.chrisdaggas.bulk-renamer.metainfo.xml", dest = "/usr/share/metainfo/com.chrisdaggas.bulk-renamer.metainfo.xml", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/com.chrisdaggas.bulk-renamer.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.chrisdaggas.bulk-renamer.svg", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/bulk-renamer/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.12"
libadwaita = ">= 1.4"
